--- a/tour1.html
+++ b/tour1.html
@@ -35,7 +35,7 @@
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
     <!--<h3>Zellerhütte - Warscheneck - Dümmlerhütte</h3>-->
     <section class="info-box">
-      <h3>Route</h3>
+      <h3>Tourenbeschreibung</h3>
     <p>Die Tour wurde auf 3 Tage aufgeteilt, kann aber natürlich auch in weniger absolviert werden.</p>
     
     <h3>Tag 1</h3>
