--- a/tour2.html
+++ b/tour2.html
@@ -35,7 +35,7 @@
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
     <!--<h3>Geißwand</h3>-->
     <section class="info-box">
-      <h3>Route</h3>
+      <h3>Tourenbeschreibung</h3>
     <p>Ausgangspunkt ist in Traunkirchen. Von Gmunden kommend vor dem Geißwandtunnel links abbiegen und Richtung Traunkirchen fahren.</p>
     <p>Nach 1-2 km sieht man links auf der Seeseite einen kostenpflichtigen Parkplatz bei dem man allerdings auch rechts in eine 180° Kehre einbiegen kann</p>
     <p>Die Schotterstraße kurz hochfahren und schon ist man auf einem gebührenfreien Parkplatz</p>
@@ -50,11 +50,12 @@
       <ul>
         <li>Höhenmeter: 470 m</li>
         <li>Länge: 3,7 km</li>
-        <li>Dauer: 1,5 Stunden Auf und Abstieg</li>
-        <li>Schwierigkeit: leicht</li>
+        <li>Dauer Fortgeschritten: 1 Stunde</li>
+        <li>Dauer Anfänger: 1.5 - 2 Stunden</li>
+        <li>Schwierigkeit: leicht, letzten 20Hm mittel</li>
         <li>Beste Jahreszeit: Frühling, Sommer, Herbst</li>
       </ul>
-    </section>
+    
     <!-- --------------------------------------------------------------- Tag2 --------------------------->
 
     <!-- ------------------------------------------------------ Karte------------------------------------------->    
