--- a/tour3.html
+++ b/tour3.html
@@ -35,7 +35,7 @@
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
     <!--<h3>Katzenstein via Grünberg</h3>-->
     <section class="info-box">
-      <h3>Route</h3>
+      <h3>Tourenbeschreibung</h3>
     <p>Ausgangs und Endpunkt ist der Parkplatz der Grünbergbahn. Dies ist ein Gebührenpflichtiger Parkplatz</p>
     <p>Über den Ortnersteig geht es auf den Grünberg</p>
     <p>Dort angekommen geht es großteils über Schotterstraßen abwärts zum Laudachsee, wo es auch eine bewirtschaftete Hütte gibt.</p>
@@ -59,10 +59,10 @@
         <li>Länge: 18.2 km</li>
         <li>Dauer Trailrunning: 3.5 - 4 Stunden</li>
         <li>Dauer Wandern: 6 - 8 Stunden</li>
-        <li>Schwierigkeit: schwierig</li>
+        <li>Schwierigkeit: schwierig, Trittsicherheit erforderlich</li>
         <li>Beste Jahreszeit: Frühling, Sommer, Herbst</li>
       </ul>
-    </section>
+    
     <!-- --------------------------------------------------------------- Tag2 --------------------------->
 
     <!-- ------------------------------------------------------ Karte------------------------------------------->    
