--- a/tour4.html
+++ b/tour4.html
@@ -36,7 +36,7 @@
     <!--<h3>Katzenstein via Grünberg</h3>-->
     
    <section class="info-box">
-      <h3>Route</h3>
+      <h3>Tourenbeschreibung</h3>
       <ol>
         <li>
           <strong>Aufstieg zum Kleinen Sonnstein (923 m):</strong><br>
@@ -68,7 +68,7 @@
         <li>Beste Jahreszeit: Frühling - Herbst</li>
         <li>Einkehrmöglichkeit: Sonnsteinhütte</li>
       </ul>
-    </section>
+   
     <!-- --------------------------------------------------------------- Tag2 --------------------------->
 
     <!-- ------------------------------------------------------ Karte------------------------------------------->    
