--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
   </header>
 
   <main>
+  	<section class="info-box">
     <h2>Ein kurzes Update zu meiner Persöhnlichkeit:</h2>
     <p>Hallo</p>
     <p>Ich heiße Fabian, komme aus Oberösterreich und bin leidenschaftlich gerne in den Bergen unterwegs.</p>
@@ -27,8 +28,6 @@
     <p>Manche meiner Touren eignen sich weiters besser für Trailrunning als zum Wandern. </p>
   </main>
 
-  <footer>
-    <p>&copy; 2025 – Meine Bergabenteuer</p>
-  </footer>
+ 
 </body>
 </html>
