--- a/touren.html
+++ b/touren.html
@@ -18,6 +18,7 @@
   </header>
 
   <main>
+  	<section class="info-box">
     <h2>Tourenberichte</h2>
     <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
 
@@ -30,8 +31,6 @@
     </div>
   </main>
 
-  <footer>
-    <p>&copy; 2025 – Meine Bergabenteuer</p>
-  </footer>
+
 </body>
 </html>
