--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </header>
 
   <main>
+  	<section class="info-box">
     <h2>Hallo!</h2>
     <p>Hier teile ich meine Abenteuer in den Bergen – mit Geschichten, Bildern und Tourendaten.</p>
     <p>Die meisten der angeführten Touren befinden sich im schönene Salzkammergut.</p>
