--- a/about.html
+++ b/about.html
@@ -28,6 +28,8 @@
     <p>Manche meiner Touren eignen sich weiters besser für Trailrunning als zum Wandern. </p>
   </main>
 
- 
+  <footer>
+    <p>&copy; 2025 – Meine Bergabenteuer</p>
+  </footer> 
 </body>
 </html>
