--- a/touren.html
+++ b/touren.html
@@ -30,7 +30,9 @@
       <!--<a class="btn" href="tour5.html">Tour 5 – Karwendel</a>-->
     </div>
   </main>
-
+  <footer>
+    <p>&copy; 2025 – Meine Bergabenteuer</p>
+  </footer>
 
 </body>
 </html>
