--- a/tour3.html
+++ b/tour3.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="katzenstein">   <!-- durch class= wird das Hintergrundbild auf der Geisswandseite abgeändert, Klasse muss im style konfiguriert sein-->
+	<div class="bg-fixed"></div>
+  <div class="bg-overlay"></div>
   <!-- Header -->
   <header>
     <h1>Katzenstein via Grünberg</h1>
