--- a/touren.html
+++ b/touren.html
@@ -27,7 +27,17 @@
       <a class="btn" href="tour2.html">Geißwand 872m</a>
       <a class="btn" href="tour3.html">Katzenstein 1349m via Grünberg</a>
       <a class="btn" href="tour4.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
-      <!--<a class="btn" href="tour5.html">Tour 5 – Karwendel</a>-->
+      <a class="btn" href="tour5.html">Mahdlgupf 1261m</a>
+      <!--<a class="btn" href="tour5.html">Tour 6 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 7 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 9 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 10 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 11 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 12 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 13 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 14 – Karwendel</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 15 – Karwendel</a>-->
     </div>
   </main>
   <footer>
