--- a/about.html
+++ b/about.html
@@ -26,6 +26,12 @@
     <p>Die GPX und KML Datein, welche zum Download bereitgestellt werden, wurden alle von mir persöhnlich aufgenommen. Leichte Abweichungen sind natürlich möglich.</p>
     <p>Meine Zeitangeben richten sich nicht nach den angegebenen Zeiten, sondern nach jener Zeit, welche für einen geübten Bergsteiger realistisch sind. D.h. allerdings auch das Anfänger oder Genusswanderer immer etwas mehr einplanen sollten.</p>
     <p>Manche meiner Touren eignen sich weiters besser für Trailrunning als zum Wandern. </p>
+    
+    
+    <!-- Hier das Bild einfügen -->
+    <div class="tour-image">
+      <img src="ICH.jpg" alt="Das bin ich" />
+    </div>
   </main>
 
   <footer>
