--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fabian's Bergabenteuer</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">   <!-- zuteilung auf die CSS Datei-->
 </head>
 <body>
   <header>
     <h1>Willkommen zu Fabian's Bergabenteuern</h1>
     <nav>
-      <a href="index.html">Start</a>
-      <a href="touren.html">Tourenberichte</a>
+      <a href="index.html">Start</a>   <!-- erzeugt einen Button der auf die Datei "index.html" zugreift-->
+      <a href="touren nach Region.html">Tourenberichte</a>
       <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
