--- a/touren nach Region.html
+++ b/touren nach Region.html
@@ -19,7 +19,7 @@
 
   <main>
   	<section class="info-box">
-    <h2>Tourenberichte</h2>
+    <h2>Tourensuche nach Region</h2>
     <p>Hier kannst du die gewünschte Region der Tour auswählen</p>
 
     <div class="tour-liste">
