--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Willkommen zu Fabian's Bergabenteuern</h1>
     <nav>
       <a href="index.html">Start</a>   <!-- erzeugt einen Button der auf die Datei "index.html" zugreift-->
-      <a href="touren nach Region.html">Tourenberichte</a>
+      <a href="touren nach Region.html">Tourensuche</a>
       <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
