--- a/touren Traunsee.html
+++ b/touren Traunsee.html
@@ -11,7 +11,7 @@
     <h1>Fabian's Bergabenteuer</h1>
     <nav>
       <a href="index.html">Start</a>
-      <a href="touren.html">Tourenberichte</a>
+      <a href="touren.html">Tourensuche</a>
       <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
@@ -19,7 +19,7 @@
 
   <main>
   	<section class="info-box">
-    <h2>Tourenberichte</h2>
+    <h2>Touren rund um den Traunsee</h2>
     <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
 
     <div class="tour-liste">
