--- a/tour2.html
+++ b/tour2.html
@@ -12,7 +12,7 @@
     <h1>Geißwand</h1>
     <nav>
       <a href="index.html">Start</a>
-      <a href="touren nach Region.html" aria-current="page">Tourenberichte</a>
+      <a href="touren nach Region.html" aria-current="page">Tourensuche</a>
       <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
@@ -95,14 +95,7 @@
      </script>
    </section>
     <!-- Ende einfügen GPS Datei </-->
-    <!-- ------------------------------------------------------ Button zum Download der GPX-Datei------------------------------------------->  
-    <!-- es wird 1 Button angezeigt -->
- <h4>Downloads</h4>
-  <div class="download-container">
-    <a href="assets/Geisswand/Geisswand.gpx" download class="download-btn">GPX Tag 1</a>
-    <a href="assets/Geisswand/Geisswand.kml" download class="download-btn">KML Tag 1</a>
-  </div>
-    
+
     <!-- ------------------------------------------------------ Bilder------------------------------------------>  
 
    <section>
@@ -127,6 +120,13 @@
      })();
    </script>
 
+   <!-- ------------------------------------------------------ Button zum Download der GPX-Datei------------------------------------------->  
+    <!-- es wird 1 Button angezeigt -->
+ <h4>Downloads</h4>
+  <div class="download-container">
+    <a href="assets/Geisswand/Geisswand.gpx" download class="download-btn">GPX Tag 1</a>
+    <a href="assets/Geisswand/Geisswand.kml" download class="download-btn">KML Tag 1</a>
+  </div>
     
     <!-- ------------------------------------------------------ Ende-------------------------------------------> 
     <!-- Button zurück zur Tourenübersicht -->
