--- a/tour5.html
+++ b/tour5.html
@@ -12,7 +12,7 @@
     <h1>Mahdlgupf</h1>
     <nav>
       <a href="index.html">Start</a>
-      <a href="touren nach Region.html" aria-current="page">Tourenberichte</a>
+      <a href="touren nach Region.html" aria-current="page">Tourensuche</a>
       <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
