--- a/tour2.html
+++ b/tour2.html
@@ -37,12 +37,12 @@
     <section class="info-box">
       <h3>Tourenbeschreibung</h3>
     <p>Ausgangspunkt ist in Traunkirchen. Von Gmunden kommend vor dem Geißwandtunnel links abbiegen und Richtung Traunkirchen fahren.</p>
-    <p>Nach 1-2 km sieht man links auf der Seeseite einen kostenpflichtigen Parkplatz bei dem man allerdings auch rechts in eine 180° Kehre einbiegen kann</p>
-    <p>Die Schotterstraße kurz hochfahren und schon ist man auf einem gebührenfreien Parkplatz</p>
-    <p>Vom Parkplatz aus nach rechts in den Wald gehen erreicht man gleich einen Wanderweg</p>
-    <p>Anfangs ist der Weg relativ steil bis man zu einer kleinen Kapelle kommt. Dort hält man sich dann rechts. Hier wird der Weg erstmal immer flacher</p>
-    <p>Bei der beschilderten Abzweigung, welche links in den Wald hinaufführt wird der Weg erneut steiler</p>
-    <p>Kurz vor dem Gipfel erreicht man eine atemberaubende Felswand mit einigen Kletterrouten</p>
+    <p>Nach 1-2 km sieht man links auf der Seeseite einen kostenpflichtigen Parkplatz bei dem man allerdings auch rechts in eine 180° Kehre einbiegen kann.</p>
+    <p>Die Schotterstraße kurz hochfahren und schon ist man auf einem gebührenfreien Parkplatz.</p>
+    <p>Vom Parkplatz aus nach rechts in den Wald gehen erreicht man gleich einen Wanderweg.</p>
+    <p>Anfangs ist der Weg relativ steil bis man zu einer kleinen Kapelle kommt. Dort hält man sich dann rechts. Hier wird der Weg erstmal immer flacher.</p>
+    <p>Bei der beschilderten Abzweigung, welche links in den Wald hinaufführt wird der Weg erneut steiler.</p>
+    <p>Kurz vor dem Gipfel erreicht man eine atemberaubende Felswand mit einigen Kletterrouten.</p>
     <p>Danach sind es nur noch wenige Meter bis man schließlich noch eine kurze Kraxxlpassage erreicht welche direkt zum kleinen, aber feinem Gipfelkreuz führt.</p>
     <!-- Weitere Details / Highlights -->
     
@@ -124,8 +124,8 @@
     <!-- es wird 1 Button angezeigt -->
  <h4>Downloads</h4>
   <div class="download-container">
-    <a href="assets/Geisswand/Geisswand.gpx" download class="download-btn">GPX Tag 1</a>
-    <a href="assets/Geisswand/Geisswand.kml" download class="download-btn">KML Tag 1</a>
+    <a href="assets/Geisswand/Geisswand.gpx" download class="download-btn">GPX</a>
+    <a href="assets/Geisswand/Geisswand.kml" download class="download-btn">KML</a>
   </div>
     
     <!-- ------------------------------------------------------ Ende-------------------------------------------> 
