--- a/tour2.html
+++ b/tour2.html
@@ -43,7 +43,7 @@
     <p>Anfangs ist der Weg relativ steil bis man zu einer kleinen Kapelle kommt. Dort hält man sich dann rechts. Hier wird der Weg erstmal immer flacher.</p>
     <p>Bei der beschilderten Abzweigung, welche links in den Wald hinaufführt wird der Weg erneut steiler.</p>
     <p>Kurz vor dem Gipfel erreicht man eine atemberaubende Felswand mit einigen Kletterrouten.</p>
-    <p>Danach sind es nur noch wenige Meter bis man schließlich noch eine kurze Kraxxlpassage erreicht welche direkt zum kleinen, aber feinem Gipfelkreuz führt.</p>
+    <p>Danach sind es nur noch wenige Meter bis man schließlich noch eine kurze Kraxxlpassage erreicht welche direkt zum kleinen, aber feinen Gipfelkreuz führt.</p>
     <!-- Weitere Details / Highlights -->
     
       <h4>Details der Tour</h4>
@@ -53,7 +53,8 @@
         <li>Dauer Fortgeschritten: 1 Stunde</li>
         <li>Dauer Anfänger: 1.5 - 2 Stunden</li>
         <li>Schwierigkeit: leicht, letzten 20Hm mittel</li>
-        <li>Beste Jahreszeit: Frühling, Sommer, Herbst</li>
+        <li>Beste Jahreszeit: Alljährlich begehbar</li>
+        <li>Einkehrmöglichkeit: Am Weg keine</li>
       </ul>
     
     <!-- --------------------------------------------------------------- Tag2 --------------------------->
