--- a/tour4.html
+++ b/tour4.html
@@ -65,7 +65,7 @@
         <li>Dauer Fortgeschritten: 1.5 Stunden</li>
         <li>Dauer Anfänger: 2.5 Stunden</li>
         <li>Schwierigkeit: mittel, Trittsicherheit erforderlich</li>
-        <li>Beste Jahreszeit: Frühling - Herbst</li>
+        <li>Beste Jahreszeit: Alljährlich begehbar</li>
         <li>Einkehrmöglichkeit: Sonnsteinhütte</li>
       </ul>
    
