--- a/tour5.html
+++ b/tour5.html
@@ -47,14 +47,14 @@
             <strong>Aufstieg</strong>
             <p>Der Weg steigt moderat an.</p>
             <p>Man passiert zwei leicht versicherte Stellen, bei denen etwas Vorsicht geboten ist.</p>
-            <p>Anschließend verlässt man den Wald und durchquert felsiges teilweise seilversichtertes Gelände.</p>
-            <p>Bei der Abzweigung angekommen kann man noch schnell (10min) zum Schoberstein abbiegen. Da auf diesem Gipfel allerdings immer sehr viel Verkehr herscht, entschied ich mich gleich zum, um ein vielfaches ruhigeren Gipfel des Mahdlgupfs, zu gehen.</p>
+            <p>Anschließend verlässt man den Wald und durchquert felsiges teilweise seilversichertes Gelände.</p>
+            <p>Bei der Abzweigung angekommen kann man noch schnell (10min) zum Schoberstein abbiegen. Da auf diesem Gipfel allerdings immer sehr viel Verkehr herrscht, entschied ich mich gleich zum - um ein vielfaches ruhigeren - Gipfel des Mahdlgupfs, zu gehen.</p>
             <p>Hier führt der Weg erneut durch bewaldetes Gebiet und schon nach kurzer Zeit hat man den Gipfel erreicht.<p>
-            <p>Wer noch genügend Kraft hat, kann auch noch zum Dachsteinblick oder zur Brennerin weiterwandern<p>
+            <p>Wer noch genügend Kraft hat, kann auch noch zum Dachsteinblick oder zur Brennerin weiterwandern.<p>
         </li>
         <li>
             <strong>Rückweg</strong>
-            <p>Erfolgt über den gleichen Weg</p>
+            <p>Erfolgt über denselben Weg.</p>
         </li>
       </ol>
     
