--- a/touren nach Region.html
+++ b/touren nach Region.html
@@ -20,7 +20,7 @@
   <main>
   	<section class="info-box">
     <h2>Tourensuche nach Region</h2>
-    <p>Hier kannst du die gewünschte Region der Tour auswählen</p>
+    <p>Hier kannst du die gewünschte Region der Tour auswählen:</p>
 
     <div class="tour-liste">
       <a class="btn" href="touren Traunsee.html">Salzkammergut Traunsee</a>
