--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
     <p>Hallo</p>
     <p>Ich heiße Fabian, komme aus Oberösterreich und bin leidenschaftlich gerne in den Bergen unterwegs.</p>
 
-    <p>Die GPX und KML Datein, welche zum Download bereitgestellt werden, wurden alle von mir persöhnlich aufgenommen. Leichte Abweichungen sind natürlich möglich.</p>
-    <p>Meine Zeitangeben richten sich nicht nach den angegebenen Zeiten, sondern nach jener Zeit, welche für einen geübten Bergsteiger realistisch sind. D.h. allerdings auch das Anfänger oder Genusswanderer immer etwas mehr einplanen sollten.</p>
-    <p>Manche meiner Touren eignen sich weiters besser für Trailrunning als zum Wandern. </p>
+    <p>Die GPX- und KML-Dateien, welche zum Download bereitgestellt werden, wurden alle von mir persönlich aufgenommen. Leichte Abweichungen sind natürlich möglich.</p>
+    <p>Meine Zeitangaben richten sich nicht nach den angegebenen Zeiten, sondern nach jener Zeit, welche für einen geübten Bergsteiger realistisch sind. D.h. allerdings auch, dass Anfänger oder Genusswanderer immer etwas mehr einplanen sollten.</p>
+    <p>Manche meiner Touren eignen sich außerdem besser für Trailrunning als zum Wandern. </p>
     
     
     <!-- Hier das Bild einfügen -->
