--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   	<section class="info-box">
     <h2>Hallo!</h2>
     <p>Hier teile ich meine Abenteuer in den Bergen – mit Geschichten, Bildern und Tourendaten.</p>
-    <p>Die meisten der angeführten Touren befinden sich im schönene Salzkammergut.</p>
+    <p>Die meisten der angeführten Touren befinden sich im schönen Salzkammergut.</p>
   </main>
 
   <footer>
