--- a/tour1.html
+++ b/tour1.html
@@ -42,7 +42,7 @@
     <p>Ausgangspunkt ist der Parkplatz am Gleinkersee. Dieser ist gleichzeitig auch der Endpunkt des Rundgangs</p>
     <p>Wir folgen den Wegpfeilern Richtung Roßleithen, welche uns über Schotterstraßen bzw. asphaltierte Straßen zum Einstieg des Wanderwegs zur Zellerhütte führen.(Nähe Sensenwerk)</p>
     <p>Von dort aus geht es dann anfangs relativ entspannt durch den Wald aufwärts.</p>
-    <p>Nach ca. 1,5 Stunden wird es dann leicht steiler und auch felsiger, bis man schlussendlich die Zellerhütte erreicht.</p>
+    <p>Nach ca. 1,5 Stunden wird es dann leicht steiler und auch felsiger, bis man schließlich die Zellerhütte erreicht.</p>
     <p>Das Ziel von Tag 1 war erreicht und einem gemütlichen Hüttenabend stand nichts mehr im Wege</p>
    
     <!-- Weitere Details / Highlights -->
@@ -59,7 +59,7 @@
     <!-- --------------------------------------------------------------- Tag2 --------------------------->
     <h3>Tag 2</h3>
     <p>Von der Zellerhütte geht es los zum ersten kleinen Gipfel, dem Schallerkogel. Dieser beeindruckt mit einem kleinen, aber feinen Gipfelkreuz und einer atemberaubenden Aussicht.</p>
-    <p>Nach einer kurzen Pause geht es weiter zum Lagelsberg, welcher bereits über 2000m liegt. Hier machten wir nochmals Rast bevor es weiter zum Warscheneck ging.</p>
+    <p>Nach einer kurzen Pause geht es weiter zum Lagelsberg, der bereits über 2000m liegt. Hier machten wir nochmals Rast bevor es weiter zum Warscheneck ging.</p>
     <p>Am Gipfel hatte es, obwohl wir mitten im August unterwegs waren, nur 1°C. Darum musste die Gipfelpause warten und nach wenigen Minuten gingen wir auch schon wieder weiter.</p>
     <p>Von nun an ging es abwärts. Aufgrund des sehr dichten Nebels übersahen wir allerdings den Toten Mann, welcher ebenfalls einer der vielen Gipfel auf dieser Route ist</p>
     <p>Darum war unser nächster Stopp die Rote Wand, die mit ihrer namensgebenden Felswand beeindruckt.</p>
