--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">   alte version bevor es auf google sichtbar wahr-->
+  <meta name="google-site-verification" content="wqdwySVdg4avV6Iqi3PRAe-6S6Vvd2kqyTO1kwe_uCs" />
   <title>Fabian's Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">   <!-- zuteilung auf die CSS Datei-->
 </head>
@@ -22,6 +23,7 @@
     <h2>Hallo!</h2>
     <p>Hier teile ich meine Abenteuer in den Bergen – mit Geschichten, Bildern und Tourendaten.</p>
     <p>Die meisten der angeführten Touren befinden sich im schönen Salzkammergut.</p>
+    </section>
   </main>
 
   <footer>
