--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta name="google-site-verification" content="wqdwySVdg4avV6Iqi3PRAe-6S6Vvd2kqyTO1kwe_uCs" />
   <title>Fabian's Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">   <!-- zuteilung auf die CSS Datei-->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J8RX118MH7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-J8RX118MH7');
+  </script>
 </head>
 <body>
   <header>
