--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">   alte version bevor es auf google sichtbar wahr-->
   <meta name="google-site-verification" content="wqdwySVdg4avV6Iqi3PRAe-6S6Vvd2kqyTO1kwe_uCs" />
-  <title>Fabian's Bergabenteuer</title>
+  <title>Fabian’s Bergabenteuer – Wandern, Bergsteigen & Trailrunning im Salzkammergut</title>
   <link rel="stylesheet" href="style.css">   <!-- zuteilung auf die CSS Datei-->
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-J8RX118MH7"></script>
