--- a/tour3.html
+++ b/tour3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Katzenstein via Grünberg | Meine Bergabenteuer</title>
+  <title>Katzenstein über Grünberg & Laudachsee – Wandern, Bergsteigen & Trailrunning im Salzkammergut | Fabian’s Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="katzenstein">   <!-- durch class= wird das Hintergrundbild auf der Geisswandseite abgeändert, Klasse muss im style konfiguriert sein-->
