--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
     </nav>
   </header>
 
-  <main>
-  	<section class="info-box">
-    <h2>Hallo!</h2>
-    <p>Hier teile ich meine Abenteuer in den Bergen – mit Geschichten, Bildern und Tourendaten.</p>
-    <p>Die meisten der angeführten Touren befinden sich im schönen Salzkammergut.</p>
-    </section>
-  </main>
+<main>
+  <section class="info-box">
+    <h2>Fabian’s Bergabenteuer</h2>
+    <p>Entdecke die vielfältigen Berg- und Wanderrouten im Oberösterreich – von entspannten Tagestouren über anspruchsvolle mehrtägige Wanderungen bis hin zu spannenden Trailrunning-Strecken. Jede Tour wird mit ausführlicher Beschreibung, GPS-Download, Bildern und nützlichen Tipps vorgestellt.</p>
+    <p>Es handelt sich um eine lebende und stets wachsende Website. Solltest du eine Tour nicht finden keine Panik! Schaue einfach ein paar Wochen später rein und vielleicht ist dann genau die perfekte Tour für dich vorhanden.</p>
+    <p>Egal, ob du gemütlich die Natur genießen oder sportlich neue Gipfel erklimmen möchtest – hier findest du die passenden Routen für dein Abenteuer in den Bergen.</p>
+    
+  </section>
+</main>
+
 
   <footer>
     <p>&copy; 2025 – Meine Bergabenteuer</p>
