--- a/touren Traunsee.html
+++ b/touren Traunsee.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tourenberichte – Meine Bergabenteuer</title>
+  <title>Fabian's Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,9 +23,9 @@
     <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
 
     <div class="tour-liste">
-      <a class="btn" href="tour2.html">Geißwand 872m</a>
-      <a class="btn" href="tour3.html">Katzenstein 1349m via Grünberg</a>
-      <a class="btn" href="tour4.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
+      <a class="btn" href="Geißwand.html">Geißwand 872m</a>
+      <a class="btn" href="Katzenstein.html">Katzenstein 1349m via Grünberg</a>
+      <a class="btn" href="Sonnstein.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
       <!--<a class="btn" href="tour5.html">Tour 6 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 7 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
