--- a/touren.html
+++ b/touren.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tourenberichte – Meine Bergabenteuer</title>
+  <title>Fabian's Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <h1>Fabian's Bergabenteuer</h1>
     <nav>
       <a href="index.html">Start</a>
-      <a href="touren.html">Tourenberichte</a>
+      <a href="touren nach Region.html">Tourensuche</a>
       <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
@@ -19,15 +19,15 @@
 
   <main>
   	<section class="info-box">
-    <h2>Tourenberichte</h2>
-    <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
+    <h2>Tourensuche nach Region</h2>
+    <p>Hier kannst du die gewünschte Region der Tour auswählen:</p>
 
     <div class="tour-liste">
-      <a class="btn" href="tour1.html">Warscheneck Überschreitung 2388m</a>
-      <a class="btn" href="tour2.html">Geißwand 872m</a>
-      <a class="btn" href="tour3.html">Katzenstein 1349m via Grünberg</a>
-      <a class="btn" href="tour4.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
-      <a class="btn" href="tour5.html">Mahdlgupf 1261m</a>
+      <a class="btn" href="touren Traunsee.html">Salzkammergut Traunsee</a>
+      <a class="btn" href="touren Attersee.html">Salzkammergut Attersee</a>
+      <a class="btn" href="touren Traunsee Phyrn-Priel.html">Region Pyhrn-Priel</a>
+      <!--<a class="btn" href="tour4.html">Kleiner und Großer Sonnstein 923m, 1037m</a>-->
+      <!--<a class="btn" href="tour5.html">Mahdlgupf 1261m</a>-->
       <!--<a class="btn" href="tour5.html">Tour 6 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 7 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
