--- a/Phyrn-Priel.html
+++ b/Phyrn-Priel.html
@@ -19,15 +19,11 @@
 
   <main>
   	<section class="info-box">
-    <h2>Tourensuche nach Region</h2>
-    <p>Hier kannst du die gewünschte Region der Tour auswählen:</p>
+    <h2>Touren in der Region Phyrn-Priel</h2>
+    <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
 
     <div class="tour-liste">
-      <a class="btn" href="Traunsee.html">Salzkammergut Traunsee</a>
-      <a class="btn" href="Attersee.html">Salzkammergut Attersee</a>
-      <a class="btn" href="Phyrn-Priel.html">Region Pyhrn-Priel</a>
-      <!--<a class="btn" href="tour4.html">Kleiner und Großer Sonnstein 923m, 1037m</a>-->
-      <!--<a class="btn" href="tour5.html">Mahdlgupf 1261m</a>-->
+      <a class="btn" href="Warscheneck.html">Warscheneck Überschreitung 2388m</a>
       <!--<a class="btn" href="tour5.html">Tour 6 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 7 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
