--- a/Attersee.html
+++ b/Attersee.html
@@ -23,7 +23,7 @@
     <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
 
     <div class="tour-liste">
-      <a class="btn" href="Mahldgupf.html">Mahdlgupf 1261m</a>
+      <a class="btn" href="Mahdlgupf.html">Mahdlgupf 1261m</a>
       <!--<a class="btn" href="tour5.html">Tour 6 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 7 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
