--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">   alte version bevor es auf google sichtbar wahr-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="wqdwySVdg4avV6Iqi3PRAe-6S6Vvd2kqyTO1kwe_uCs" />
   <title>Fabian’s Bergabenteuer – Wandern, Bergsteigen & Trailrunning im Salzkammergut</title>
   <link rel="stylesheet" href="style.css">   <!-- zuteilung auf die CSS Datei-->
