--- a/Sonnstein.html
+++ b/Sonnstein.html
@@ -144,7 +144,7 @@
     <!-- ------------------------------------------------------ Ende-------------------------------------------> 
     <!-- Button zurück zur Tourenübersicht -->
     <div class="tour-liste">
-      <a class="btn" href="touren nach Region.html">Zurück zu allen Touren</a>
+      <a class="btn" href="touren.html">Zurück zu allen Touren</a>
     </div>
   </main>
 
