--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     gtag('config', 'G-J8RX118MH7');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2109311748445479"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
