--- a/Traunsee.html
+++ b/Traunsee.html
@@ -28,7 +28,7 @@
       <a class="btn" href="Geißwand.html">Geißwand 872m</a>
       <a class="btn" href="Katzenstein.html">Katzenstein 1349m via Grünberg</a>
       <a class="btn" href="Sonnstein.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
-      <!--<a class="btn" href="tour5.html">Tour 6 – Karwendel</a>-->
+      <a class="btn" href="Bischofsmütze.html">Bischofsmütze via Franz Schenkenberger Steig 1446m</a>
       <!--<a class="btn" href="tour5.html">Tour 7 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 9 – Karwendel</a>-->
