--- a/Bischofsmütze.html
+++ b/Bischofsmütze.html
@@ -85,7 +85,7 @@
 
        // Mehrere GPX-Dateien einbinden
        const tracks = [
-         "assets/Bischofsmuetze/Bischofsmütze.gpx"
+         "assets/Bischofsmütze/Bischofsmütze.gpx"
        ];
 
        tracks.forEach(file => {
@@ -115,7 +115,7 @@
 
      // Lädt die Galerie sofort beim Laden der Seite
      (async () => {
-         const response = await fetch('assets/Bischofsmuetze/images.json');
+         const response = await fetch('assets/Bischofsmütze/images.json');
          const images = await response.json();
 
          images.forEach(src => {
