--- a/Bischofsmütze.html
+++ b/Bischofsmütze.html
@@ -38,7 +38,7 @@
       <h3>Tourenbeschreibung</h3>
     <p>Ausgangspunkt ist der Taferlklaussee-Parkplatz. Zufahrtsmöglichkeiten entweder über Altmünster oder über Steinbach am Attersee.</p>
     <p>Die ersten 700-800m folgt man der Forststraße über den gut markierten Weg zum Brunnkogel bzw. zum Hochleckenhaus.</p>
-    <p>Bei dem Brünnlein angekommen, wo der Wegzeiger nach rechts führen würde, verlassen wir den markierten Wanderweg.</p>
+    <p>Bei dem Brünnlein angekommen, wo der Wegzeiger nach rechts führen würde, verlassen wir den markierten Wanderweg und gehen Richtung links.</p>
     <p>Ab jetzt wird der Weg einsamer und ruhiger.</p>
     <p>Wir folgen dem breiten Wanderweg noch einige Zeit weiter aufwärts durch den Wald bis dieser nahtlosen in einen schmalen serpentinenartigen Pfad übergeht.</p>
     <p>Auf diesen Abschnitt kam es zu einer erfreulichen Begegnung mit 3 Gämsen die seelenruhig grasten und mich nicht einmal beachteten.</p>
