--- a/Traunsee.html
+++ b/Traunsee.html
@@ -25,10 +25,10 @@
     <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
 
     <div class="tour-liste">
-      <a class="btn" href="Geißwand.html">Geißwand 872m</a>
+      <a class="btn" href="Geisswand.html">Geißwand 872m</a>
       <a class="btn" href="Katzenstein.html">Katzenstein 1349m via Grünberg</a>
       <a class="btn" href="Sonnstein.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
-      <a class="btn" href="Bischofsmütze.html">Bischofsmütze via Franz Schenkenberger Steig 1446m</a>
+      <a class="btn" href="Bischofsmuetze.html">Bischofsmütze via Franz Schenkenberger Steig 1446m</a>
       <!--<a class="btn" href="tour5.html">Tour 7 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 9 – Karwendel</a>-->
