--- a/AlleTouren.html
+++ b/AlleTouren.html
@@ -21,18 +21,18 @@
 
   <main>
   	<section class="info-box">
-    <h2>Tourensuche nach Region</h2>
-    <p>Hier kannst du die gewünschte Region der Tour auswählen:</p>
+    <h2>Tourensammlung</h2>
+    <p>Hier kannst du alle meine Touren einsehen:</p>
 
     <div class="tour-liste">
-      <a class="btn" href="Traunsee.html">Salzkammergut Traunsee</a>
-      <a class="btn" href="Attersee.html">Salzkammergut Attersee</a>
-      <a class="btn" href="Phyrn-Priel.html">Region Pyhrn-Priel</a>
-      <a class="btn" href="AlleTouren.html">Gesamte Tourensammlung</a>
-      <!--<a class="btn" href="tour5.html">Mahdlgupf 1261m</a>-->
-      <!--<a class="btn" href="tour5.html">Tour 6 – Karwendel</a>-->
-      <!--<a class="btn" href="tour5.html">Tour 7 – Karwendel</a>-->
-      <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
+    	<a class="btn" href="Bischofsmuetze.html">Bischofsmütze via Franz Schenkenberger Steig 1446m</a>
+      <a class="btn" href="Geisswand.html">Geißwand 872m</a>
+      <a class="btn" href="Katzenstein.html">Katzenstein 1349m via Grünberg</a>
+      <a class="btn" href="Mahdlgupf.html">kleiner Schönberg 895m</a>
+      <a class="btn" href="Schoenberg.html">kleiner Schönberg 895m</a>
+      <a class="btn" href="Sonnstein.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
+      <a class="btn" href="Warscheneck.html">kleiner Schönberg 895m</a>
+            <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 9 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 10 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 11 – Karwendel</a>-->
@@ -41,6 +41,12 @@
       <!--<a class="btn" href="tour5.html">Tour 14 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 15 – Karwendel</a>-->
     </div>
+      <!-- ------------------------------------------------------ Ende-------------------------------------------> 
+    <!-- Button zurück zur Tourenübersicht -->
+    <div class="tour-liste">
+      <a class="btn" href="touren.html">Zurück zu allen Touren</a>
+    </div>
+    
   </main>
   <footer>
     <p>&copy; 2025 – Meine Bergabenteuer</p>
