--- a/Schoenberg.html
+++ b/Schoenberg.html
@@ -147,8 +147,8 @@
     <!-- es wird 1 Button angezeigt -->
  <h4>Downloads</h4>
   <div class="download-container">
-    <a href="assets/Schoenberg/Schoenberg.gpx" download class="download-btn">GPX</a>
-    <a href="assets/Schoenberg/Schoenberg.kml" download class="download-btn">KML</a>
+    <a href="assets/Schoenberg/kleiner Schoenberg.gpx" download class="download-btn">GPX</a>
+    <a href="assets/Schoenberg/kleiner Schoenberg.kml" download class="download-btn">KML</a>
   </div>
    
     <!-- ------------------------------------------------------ Ende-------------------------------------------> 
