--- a/AlleTouren.html
+++ b/AlleTouren.html
@@ -28,10 +28,10 @@
     	<a class="btn" href="Bischofsmuetze.html">Bischofsmütze via Franz Schenkenberger Steig 1446m</a>
       <a class="btn" href="Geisswand.html">Geißwand 872m</a>
       <a class="btn" href="Katzenstein.html">Katzenstein 1349m via Grünberg</a>
-      <a class="btn" href="Mahdlgupf.html">kleiner Schönberg 895m</a>
+      <a class="btn" href="Mahdlgupf.html">Mahdlgupf 1261m</a>
       <a class="btn" href="Schoenberg.html">kleiner Schönberg 895m</a>
       <a class="btn" href="Sonnstein.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
-      <a class="btn" href="Warscheneck.html">kleiner Schönberg 895m</a>
+      <a class="btn" href="Warscheneck.html">Warscheneck Überschreitung 2388m</a>
             <!--<a class="btn" href="tour5.html">Tour 8 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 9 – Karwendel</a>-->
       <!--<a class="btn" href="tour5.html">Tour 10 – Karwendel</a>-->
