--- a/Warscheneck.html
+++ b/Warscheneck.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Warscheneck Überschreitung | Meine Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2109311748445479"
+     crossorigin="anonymous"></script>
 </head>
 <body class="Warscheneck">
   <!-- Header -->
